--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,9 +9,9 @@ appcompat = "1.6.1"
 material = "1.10.0"
 constraintlayout = "2.1.4"
 kapt = "1.9.20-RC"
-lifecycle = "2.5.0-alpha02"
-room = "2.4.1"
-coroutines = "1.3.9"
+lifecycle = "2.6.2"
+room = "2.5.2"
+coroutines = "1.7.3"
 dagger = "2.48.1"
 retrofit = "2.9.0"
 logging-interceptor = "4.11.0"
@@ -25,20 +25,20 @@ espresso-core = { group = "androidx.test.espresso", name = "espresso-core", vers
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
-viewmodel = { group = "androidx.lifecycle:lifecycle-viewmodel-ktx", name = "viewmodel", version.ref = "lifecycle" }
-livedata = { group = "androidx.lifecycle:lifecycle-livedata-ktx", name = "livedata", version.ref = "lifecycle" }
-viewmodel-savedstate = { group = "androidx.lifecycle:lifecycle-viewmodel-savedstate", name = "viewmodel-savedstate", version.ref = "lifecycle" }
-annotation-processor = { group = "androidx.lifecycle:lifecycle-common-java8", name = "annotation-processor", version.ref = "lifecycle" }
-room-runtime = { group = "androidx.room:room-runtime", name = "room-runtime", version.ref = "room" }
-room-compiler = { group = "androidx.room:room-compiler", name = "room-compiler", version.ref = "room" }
-room-ktx = { group = "androidx.room:room-ktx", name = "room-ktx", version.ref = "lifecycle" }
-coroutines = { group = "org.jetbrains.kotlinx:kotlinx-coroutines-android", name = "coroutines", version.ref = "coroutines" }
-dagger = { group = "com.google.dagger:dagger", name = "dagger", version.ref = "dagger" }
-dagger-compiler = { group = "com.google.dagger:dagger-compiler", name = "dagger-compiler", version.ref = "dagger" }
-retrofit = { group = "com.squareup.retrofit2:retrofit", name = "retrofit", version.ref = "retrofit" }
-gson = { group = "com.squareup.retrofit2:converter-gson", name = "gson", version.ref = "retrofit" }
-logging-interceptor = { group = "com.squareup.okhttp3:logging-interceptor", name = "logging-interceptor", version.ref = "logging-interceptor" }
-glide = { group = "com.github.bumptech.glide:glide", name = "glide", version.ref = "glide" }
+viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycle" }
+viewmodel-savedstate = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-savedstate", version.ref = "lifecycle" }
+annotation-processor = { group = "androidx.lifecycle", name = "lifecycle-common-java8", version.ref = "lifecycle" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
+dagger = { group = "com.google.dagger", name = "dagger", version.ref = "dagger" }
+dagger-compiler = { group = "com.google.dagger", name = "dagger-compiler", version.ref = "dagger" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "logging-interceptor" }
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
