--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,16 @@
         android:theme="@style/Theme.TVGuide"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.artist.ArtistActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.tvshow.TVShowActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.movie.MovieActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
